tests/ui/parser/using_operator_not_user_definable.sol
using {f as new} for uint; //~ ERROR: expected
